# web-scraping-rust

./: Cargo.toml
Ch.1 First Web Scraper/: Cargo.toml  Readme.md
Ch.1 First Web Scraper/src/: main.rs
Ch.2 Advanced HTML Parsing/: Cargo.toml  Readme.md
Ch.2 Advanced HTML Parsing/src/: html_tree_printer.rs  main.rs
Ch.3 Writing Web Crawlers/: Cargo.toml  Readme.md
Ch.3 Writing Web Crawlers/src/: main.rs
Ch.4 Web Crawling Models/: Cargo.toml  Readme.md
Ch.4 Web Crawling Models/src/: main.rs
Ch.5 Storing Data/: Cargo.toml  Readme.md
Ch.5 Storing Data/src/: main.rs
Ch.6 Reading Documents/: Cargo.toml  Readme.md
Ch.6 Reading Documents/src/: main.rs
Ch.7 Cleaning Data/: Cargo.toml  Readme.md
Ch.7 Cleaning Data/src/: main.rs
Ch.8 Reading and Writing Natural Languages/: Cargo.toml  Readme.md
Ch.8 Reading and Writing Natural Languages/src/: main.rs
