[package]
name = "advanced_html_parsing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.9.4"
reqwest = { version = "0.11.20", features = ["json"] }
scraper = "0.17.1"
thiserror = "1.0.47"
tokio = { version = "1.32.0", features = ["full"] }
