[package]
name = "reading_documents"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
fancy-regex = "0.11.0"
reqwest = { version = "0.11.20", features = ["json"] }
scraper = "0.17.1"
thiserror = "1.0.47"
tokio = { version = "1.32.0", features = ["full"] }
url = "2.4.0"
